# backend_rg

./: .env.example  README.md  docker-compose.yml  indexes.sql  pyproject.toml  pytest.ini  requirements.txt
accounts/: api_urls.py  api_views.py  models.py  serializers.py  utils.py
accounts/migrations/: 0009_add_is_infant_to_person.py
docs/adr/: 0001-record-architecture-decisions.md  0002-django-rest-framework.md  0003-service-order-phase-state-machine.md  0004-payment-details-jsonfield.md  0005-cpf-validation-and-duplicates.md  0006-planilha-payment-centric.md  0007-draft-save-bypass-validation.md  0008-fk-set-null-on-person-delete.md  0009-indexes-via-indexes-sql.md
roupadegala/: settings_test.py
service_control/: api_urls.py  api_views.py  models.py  serializers.py
service_control/migrations/: 0031_add_client_name_to_serviceorder.py  0032_serviceorder_data_resgate_and_more.py  0033_backfill_payment_uuids.py
tests/: conftest.py  test_auth.py  test_cancelamento.py  test_cpf_validation.py  test_health.py  test_os_update_payment.py  test_payment_management.py  test_planilha.py  test_planilha_totals.py  test_resgate.py  test_service_order_phases.py  test_venda_auto_finalize.py  test_virtual_os_estorno.py
