[project]
name = "roupadegala"
version = "0.1.0"
description = "Backend for Roupa de Gala — formal wear rental/sale management"
authors = [
    {name = "Decode Dev"}
]
requires-python = ">=3.11,<4.0"

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = [
    "migrations",
    ".venv",
    "venv",
    "staticfiles",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "DJ",  # flake8-django
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by line-length)
    "B008",  # function call in default argument (common in DRF)
    "DJ001", # nullable charfield (Django allows both; project uses null=True widely)
]

[tool.ruff.lint.per-file-ignores]
"**/migrations/*" = ["E", "F", "I"]
"**/settings.py" = ["F403", "F405"]

[tool.ruff.lint.isort]
known-first-party = ["accounts", "products", "service_control", "roupadegala"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "roupadegala.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
testpaths = ["tests", "accounts", "service_control", "products"]
addopts = "--reuse-db --tb=short -p no:warnings"
